Fixed right header spacings

--- a/src/components/header/Header.module.css
+++ b/src/components/header/Header.module.css
@@ -26,11 +26,11 @@
     z-index: 100000;
     display: flex;
     flex-direction: row;
-    column-gap: 0.7rem;
+    column-gap: 0.5rem;
     align-items: center;
     justify-content: flex-end;
     /* margin: 1rem; */
-    padding-right: 20px;
+    padding-right: 10px;
     width: fit-content;
 }
 
